--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 bidict==0.23.1
 blinker==1.8.2
 click==8.1.7
+dnspython==2.6.1
+eventlet==0.37.0
 Flask==3.0.3
 Flask-SocketIO==5.3.7
+greenlet==3.1.1
 h11==0.14.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
@@ -11,7 +14,8 @@ numpy==2.1.1
 opencv-python==4.10.0.84
 python-engineio==4.9.1
 python-socketio==5.11.4
+setuptools==75.1.0
 simple-websocket==1.0.0
+six==1.16.0
 Werkzeug==3.0.4
 wsproto==1.2.0
-eventlet==0.31.0
